k8s/services/static-assets/static-assets-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-assets
spec:
  selector:
    app: static-assets
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
