k8s/services/static-assets/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-assets
spec:
  ingressClassName: traefik
  rules:
    - host: static.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static-assets
                port:
                  number: 80
